apps/desktop/src-tauri/tests/snapshots/ipc_shape__heron_report_frontend_error__request_null_stacks.snap
---
source: apps/desktop/src-tauri/tests/ipc_shape.rs
expression: value
---
{
  "app_build": "2026-05-01",
  "app_version": "0.1.0",
  "component": "Settings",
  "component_stack": null,
  "error_class": "promise_rejection",
  "message": "boom",
  "route": "/settings",
  "stack": null
}
